added chatId and token to profile
